--- a/pom.xml
+++ b/pom.xml
@@ -25,7 +25,7 @@
   </configuration>
   </plugin>
   </plugins>
-  <finalName>sureshmaven</finalName>
+  <finalName>java_package</finalName>
   </build>
 
 </project>
